# AndroidExamples

./: .gitignore  README.md  build.gradle  settings.gradle
MakeSign/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
example_activity_lifecycle/: build.gradle
example_activity_lifecycle/src/main/: AndroidManifest.xml
example_activity_lifecycle_export/: build.gradle
example_activity_lifecycle_export/src/main/: AndroidManifest.xml
example_arc/: build.gradle
example_arc/src/main/: AndroidManifest.xml
example_chart/: build.gradle
example_chart/src/main/: AndroidManifest.xml
example_custom_views/: build.gradle
example_custom_views/src/main/: AndroidManifest.xml
example_databinding/: build.gradle
example_databinding/src/main/: AndroidManifest.xml
example_dispatch_event/: build.gradle
example_dispatch_event/src/main/: AndroidManifest.xml
example_ffmpeg/: CMakeLists.txt  CMakeLists1.txt  build.gradle  build_android.sh  import_soure.txt
example_ffmpeg/src/androidTest/java/demo/simple/example_ffmpeg/: ExampleInstrumentedTest.java
example_ffmpeg/src/main/: AndroidManifest.xml
example_ffmpeg/src/main/cpp/: FFmpegUtils.cpp  ffmpeg_utils.cpp
example_ffmpeg/src/main/cpp/ffmpeg/: cmdutils.c  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c
example_ffmpeg/src/main/cpp/include/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h
example_ffmpeg/src/main/cpp/include/libavcodec/: mathops.h
example_ffmpeg/src/main/cpp/include/libavformat/: avformat.h
example_ffmpeg/src/main/cpp/include/libavutil/: ffversion.h  internal.h  thread.h
example_ffmpeg/src/main/java/demo/simple/example_ffmpeg/: MainActivity.java
example_ffmpeg/src/main/res/layout/: activity_main.xml
example_ffmpeg/src/main/res/values/: strings.xml
example_ffmpeg/src/test/java/demo/simple/example_ffmpeg/: ExampleUnitTest.java
example_fragment_proxy_activity_result/: build.gradle
example_fragment_proxy_activity_result/src/main/: AndroidManifest.xml
example_handler/: build.gradle
example_image_browser/: build.gradle
example_image_swiper/: build.gradle
example_item_decoration/: build.gradle
example_keyboard_new_api/: build.gradle
example_layout_manager/: build.gradle
example_lint/: build.gradle  lint.xml
example_lottie/: build.gradle
example_motion_layout/: build.gradle
example_navigation/: build.gradle
example_ndk_cmake/: CMakeLists.txt  build.gradle
example_ndk_cmake/src/androidTest/java/me/simple/example_ndk_cmake/: ExampleInstrumentedTest.java
example_ndk_cmake/src/main/: AndroidManifest.xml
example_ndk_cmake/src/main/java/me/simple/example_ndk_cmake/: MainActivity.java  Test.java
example_ndk_cmake/src/main/jni/: android_log.h  hello_jni.c
example_ndk_cmake/src/main/res/layout/: activity_main.xml
example_ndk_cmake/src/main/res/values/: strings.xml
example_ndk_cmake/src/test/java/me/simple/example_ndk_cmake/: ExampleUnitTest.java
example_scroller/: build.gradle
example_simplify_selector/: build.gradle
example_xfer_model/: build.gradle
example_zhihu_bottom_dialog/: build.gradle
exmaple_stackview/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
scroller_demo/: build.gradle
(+215 files in other folders)
